Add screenshort and add buy a coffe

--- a/popup.html
+++ b/popup.html
@@ -467,6 +467,9 @@
     <div id="count">0</div>
     <div id="tabsLabel">tabs open</div>
     <div id="warningMsg" class="warning-msg"></div>
+    <a href="https://buymeacoffee.com/dangtanqui" target="_blank" style="display:inline-flex;align-items:center;gap:6px;background:#FFDD00;color:#000;padding:6px 12px;border-radius:6px;text-decoration:none;font-weight:bold;font-size:12px;margin-top:10px;">
+      ☕ Buy Me a Coffee
+    </a>
   </div>
   
   <div class="section">
